EVPRO-1306 - part1 - subscribermanager still there, can be not used for basic CDR flow